--- a/test1/test1.vbproj
+++ b/test1/test1.vbproj
@@ -86,6 +86,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Voiture.vb" />
+    <Compile Include="Véhicule.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
