--- a/test1/test1.vbproj
+++ b/test1/test1.vbproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <Compile Include="Distance.vb" />
     <Compile Include="Module1.vb" />
+    <Compile Include="Outils.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
