--- a/test1/test1.vbproj
+++ b/test1/test1.vbproj
@@ -90,7 +90,9 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Decompte.vb" />
     <Compile Include="Distance.vb" />
+    <Compile Include="Logs.vb" />
     <Compile Include="Module1.vb" />
     <Compile Include="Outils.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
